[package]
name = "day7_P2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.51.1", features = ["tcp", "kad", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "ping", "macros"] }
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }