[package]
name = "day8_reqres_p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
clap = { version = "4.1.6", features = ["derive"] }
either = "1.8"
env_logger = "0.10"
futures = "0.3.27"
libp2p = { version = "0.39.1"}
multiaddr = { version = "0.17.0" }